--- a/part_1_mars_news.ipynb
+++ b/part_1_mars_news.ipynb
@@ -19,7 +19,8 @@
     "from splinter import Browser\n",
     "from selenium.webdriver.chrome.service import Service\n",
     "from webdriver_manager.chrome import ChromeDriverManager\n",
-    "from bs4 import BeautifulSoup"
+    "from bs4 import BeautifulSoup\n",
+    "import json"
    ]
   },
   {
@@ -1062,7 +1063,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/nd/4mmm3lf93z97115vttqhwb9c0000gq/T/ipykernel_14895/1269820202.py:2: DeprecationWarning: The 'text' argument to find()-type methods is deprecated. Use 'string' instead.\n",
+      "/var/folders/nd/4mmm3lf93z97115vttqhwb9c0000gq/T/ipykernel_15098/1269820202.py:2: DeprecationWarning: The 'text' argument to find()-type methods is deprecated. Use 'string' instead.\n",
       "  texts = soup.find_all(text=True)\n"
      ]
     }
@@ -1105,7 +1106,7 @@
    "outputs": [],
    "source": [
     "# Create an empty list to store the dictionaries\n",
-    "title_and_previews = []\n"
+    "titles_and_previews = []\n"
    ]
   },
   {
@@ -1172,11 +1173,11 @@
     "        data = {'title': title, 'preview': preview}\n",
     "        \n",
     "        # Add the dictionary to the list\n",
-    "        title_and_previews.append(data)\n",
+    "        titles_and_previews.append(data)\n",
     "else:\n",
     "    print(\"Mismatch in the number of titles and previews found.\")\n",
     "\n",
-    "title_and_previews\n"
+    "titles_and_previews\n"
    ]
   },
   {
@@ -1189,11 +1190,34 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Write output to file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data has been written to titles_and_previews.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "filename = 'titles_and_previews.json'\n",
+    "\n",
+    "# Open the file in write mode and use json.dump() to write the data\n",
+    "with open(filename, 'w', encoding='utf-8') as f:\n",
+    "    json.dump(titles_and_previews, f, ensure_ascii=False, indent=4)\n",
+    "\n",
+    "print(f\"Data has been written to {filename}\")"
+   ]
   }
  ],
  "metadata": {
